--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,8 @@ dependencies = [
     'click',
     'ipython',
     'scikit-learn',
+    'simplejpeg',
+    'fastplotlib[notebook]',
 ]
 
 # Configure package discovery for setuptools
