--- a/.github/workflows/site.yml
+++ b/.github/workflows/site.yml
@@ -33,7 +33,7 @@ jobs:
         python-version: '3.11'
 
     - name: Install python dependencies
-      run: pip install -r requirements.txt
+      run: pip install .
 
     - name: preprocess
       run: |
