replace data.py with fetch.py
use pooch to grab data, much better

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,7 @@ dependencies = [
     'simplejpeg',
     'fastplotlib[notebook]',
     'imageio',
+    'pooch',
 ]
 
 # Configure package discovery for setuptools
