--- a/.github/workflows/site.yml
+++ b/.github/workflows/site.yml
@@ -40,7 +40,7 @@ jobs:
         python scripts/strip_text.py
         # download data first, so we don't have a race for each notebook
         mkdir -p docs/data
-        python src/workshop_utils/data.py docs/data
+        python src/workshop_utils/fetch.py
 
     - name: Build site
       # In order to reduce interval tqdm updates (so that rendered output is less
