adds setup instructions

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,7 @@ dependencies = [
     'fastplotlib[notebook]',
     'imageio',
     'pooch',
+    'rich',
 ]
 
 # Configure package discovery for setuptools
