--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,7 @@ dependencies = [
     'scikit-learn',
     'simplejpeg',
     'fastplotlib[notebook]',
+    'pyqt6',
     'imageio',
     'pooch',
     'rich',
