--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: "Flatiron workshop on neural data analysis, FENS 2024"
+site_name: "Flatiron CCN workshop on neural data analysis, FENS 2024"
 repo_url: https://github.com/flatironinstitute/ccn-software-fens-2024
 
 theme:
