--- a/.github/workflows/site.yml
+++ b/.github/workflows/site.yml
@@ -33,16 +33,17 @@ jobs:
         python-version: '3.11'
 
     - name: Install python dependencies
-      run: pip install .
+      run: |
+        pip install .
+        # for some reason, pynajax being present causes mkdocs build to fail,
+        # but only mkdocs build, and only on the github action
+        pip uninstall pynajax
 
     - name: preprocess
       run: |
         python scripts/strip_text.py
         # download data first, so we don't have a race for each notebook
         python src/workshop_utils/fetch.py
-
-    - name: Setup upterm session
-      uses: lhotari/action-upterm@v1
 
     - name: Build site
       # In order to reduce interval tqdm updates (so that rendered output is less
