adds scikit image dependency

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,6 +49,7 @@ dependencies = [
     'pooch',
     'rich',
     'pynajax',
+    'scikit-image',
 ]
 
 # Configure package discovery for setuptools
