--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,7 @@ dependencies = [
     'ipython',
     'scikit-learn',
     'simplejpeg',
+    'pygfx @ git+https://github.com/pygfx/pygfx.git',
     'fastplotlib[notebook] @ git+https://github.com/fastplotlib/fastplotlib.git',
     'glfw',
     'imageio',
