fpl release, can install from pypi again

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,8 +43,7 @@ dependencies = [
     'ipython',
     'scikit-learn',
     'simplejpeg',
-    'pygfx @ git+https://github.com/pygfx/pygfx.git',
-    'fastplotlib[notebook] @ git+https://github.com/fastplotlib/fastplotlib.git',
+    'fastplotlib[notebook]',
     'glfw',
     'imageio',
     'pooch',
