updates dependencies for current pypi versions

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,14 +37,13 @@ dependencies = [
     'h5py',
     'matplotlib',
     'dandi',
-    'nemos @ git+https://github.com/flatironinstitute/nemos.git',
+    'nemos',
     'pytest',
     'click',
     'ipython',
     'scikit-learn',
     'simplejpeg',
-    'pygfx @ git+https://github.com/pygfx/pygfx.git',
-    'fastplotlib[notebook] @ git+https://github.com/fastplotlib/fastplotlib.git',
+    'fastplotlib[notebook]',
     'glfw',
     'imageio',
     'pooch',
